--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,15 +15,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'leaderboard-list' %}">Your leaderboards</a>
+                            <a class="nav-link" aria-current="page" href="{% url 'leaderboard-list' %}"><h3>Your leaderboards</h3></a>
                         </li>
                         {% if request.user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                                <a class="nav-link" href="{% url 'account_logout' %}"><h3>Logout</h3></a>
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                                <a class="nav-link" href="{% url 'account_login' %}"><h3>Login</h3></a>
                             </li>
                         {% endif %}
                     </ul>
