--- a/leaderboards/templates/leaderboards/leaderboard_list.html
+++ b/leaderboards/templates/leaderboards/leaderboard_list.html
@@ -9,13 +9,13 @@
         </a>
     </div>
 
-    <ol class="list-group list-group-numbered mt-4">
+    <ol class="list-group mt-4">
         {% for leaderboard in object_list %}
             <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
                     <a class="text-black text-decoration-none"
                        {% if not completed %}href="{% url 'leaderboard-detail' leaderboard.pk %}"{% endif %}>
-                        <div class="fw-bold">{{ leaderboard|linebreaks }}</div>
+                        <div class="h4">{{ leaderboard|linebreaks }}</div>
 
                     </a>
                 </div>
