info on how to retrieve and submit scores, added 'extra' as an optional field for scores

--- a/leaderboards/templates/leaderboards/score_list.html
+++ b/leaderboards/templates/leaderboards/score_list.html
@@ -12,6 +12,7 @@
                 <th scope="col">Nickname</th>
                 <th scope="col">Points</th>
                 <th scope="col">Time</th>
+                <th scope="col">Extra info</th>
             </tr>
             </thead>
             <tbody>
@@ -21,6 +22,7 @@
                     <td>{{ score.name }}</td>
                     <td>{{ score.points }}</td>
                     <td>{{ score.submitted_date|timesince }} ago</td>
+                    <td>{{ score.extra }}</td>
                     <td></td>
                 </tr>
             {% empty %}
