--- a/leaderboards/templates/leaderboards/leaderboard_detail.html
+++ b/leaderboards/templates/leaderboards/leaderboard_detail.html
@@ -16,7 +16,7 @@
             <th scope="col">Key</th>
             <th scope="col">Value</th>
             <th scope="col">Description</th>
-            <th scope="col">Action</th>
+            <th scope="col">Help</th>
         </tr>
         </thead>
         <tbody>
@@ -26,13 +26,44 @@
             <td><b>{{ object.public_key }}</b></td>
             <td>Used to retrieve scores</td>
             <td>
-                <div class="d-flex">
-                    <a href="{% url 'score-list' object.public_key %}" class="">
-                        <button type="submit" class="btn btn-outline-primary">Html</button>
-                    </a>
-                    <a href="{% url 'api:scores' object.public_key %}">
-                        <button type="submit" class="btn btn-outline-primary">Json</button>
-                    </a>
+                {#                <div class="d-flex">#}
+                {#                    <a href="{% url 'score-list' object.public_key %}" class="">#}
+                {#                        <button type="submit" class="btn btn-outline-primary">Html</button>#}
+                {#                    </a>#}
+                {#                    <a href="{% url 'api:scores' object.public_key %}">#}
+                {#                        <button type="submit" class="btn btn-outline-primary">Json</button>#}
+                {#                    </a>#}
+                {#                </div>#}
+
+                <button type="submit" class="btn btn-outline-primary" data-bs-toggle="modal"
+                        data-bs-target="#retrieveModal">How to retrieve
+                </button>
+
+                <!-- Modal -->
+                <div class="modal  modal-lg fade" id="retrieveModal" tabindex="-1" aria-labelledby="retrieveModalLabel"
+                     aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="retrieveModalLabel">How to retrieve scores</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>To retrieve scores you should make a 'GET' request.</p>
+                                <p>For scores in JSON format use this link:</p>
+                                <p><a href="{% url 'api:scores' object.public_key %}"
+                                      target="_blank">{{ retrieve_url }}</a></p>
+                                <p>For scores appearing as a website use this link:</p>
+                                <p><a href="{% url 'score-list' object.public_key %}"
+                                      target="_blank">{{ retrieve_url_website }}</a></p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </td>
         </tr>
@@ -47,7 +78,7 @@
                 </button>
 
                 <!-- Modal -->
-                <div class="modal fade" id="submitModal" tabindex="-1" aria-labelledby="submitModalLabel"
+                <div class="modal modal-lg fade" id="submitModal" tabindex="-1" aria-labelledby="submitModalLabel"
                      aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -64,6 +95,11 @@
                                     <li>player_name</li>
                                     <li>points</li>
                                 </ul>
+                                <p>Optional parameter is:</p>
+                                <ul>
+                                    <li>extra</li>
+                                </ul>
+                                <p>URL for making a POST request is: <code>{{ submit_url }}</code></p>
                                 <p>Example JSON (application/json) POST request body: </p>
                                 <code>
                                     {
@@ -72,7 +108,16 @@
                                     "points": 523123
                                     }
                                 </code>
-
+                                <p class="mt-3">Try making a POST request online to see how it works. Go to <a
+                                        href="https://reqbin.com/post-online" target="_blank">https://reqbin.com/</a>
+                                    and paste the URL
+                                    from above in URL field. Click "Content" and paste the request body from above in
+                                    JSON (application/json) field. Don't forget the curly brackets { }. The last step is
+                                    to click "Send". If everything is OK you should see the response saying:
+                                    "Score has been submitted.". The leaderboard remembers the user, so if you submit
+                                    your score again, your score will be updated if the new one is higher than the
+                                    previous one or if you change the nickname or extra info.
+                                </p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
@@ -97,6 +142,7 @@
             <th scope="col">Nickname</th>
             <th scope="col">Points</th>
             <th scope="col">Time</th>
+            <th scope="col">Extra info</th>
             <th scope="col">Player ID</th>
         </tr>
         </thead>
@@ -107,6 +153,7 @@
                 <td>{{ score.name }}</td>
                 <td>{{ score.points }}</td>
                 <td>{{ score.submitted_date|timesince }} ago</td>
+                <td>{{ score.extra }}</td>
                 <td>{{ score.player_id }}</td>
                 <td></td>
             </tr>
