--- a/leaderboards/templates/leaderboards/score_list.html
+++ b/leaderboards/templates/leaderboards/score_list.html
@@ -11,7 +11,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Nickname</th>
                 <th scope="col">Points</th>
-                <th scope="col">Time</th>
+                <th scope="col">Submission time</th>
                 <th scope="col">Extra info</th>
             </tr>
             </thead>
