--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
     <div class="d-flex justify-content-center">
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'leaderboard-list' %}">
+                <a class="navbar-brand" href="{% url 'homepage' %}">
                     <img src="{% static 'icons/highscore.png' %}" height="32px"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
