--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -4,6 +4,8 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h4>{% trans "Change Password" %}</h4>
-    <p class="small">{% trans 'Your password is now changed.' %}</p>
+    <div class="d-flex flex-column align-items-center">
+        <h4>{% trans "Change Password" %}</h4>
+        <p class="small">{% trans 'Your password is now changed.' %}</p>
+    </div>
 {% endblock %}
