--- a/leaderboards/templates/leaderboards/leaderboard_create.html
+++ b/leaderboards/templates/leaderboards/leaderboard_create.html
@@ -4,7 +4,7 @@
 {% block content %}
     <a href="{% url 'leaderboard-list' %}">
         <button type="button"
-                class="btn btn-primary btn-sm mt-3 mx-1">Back
+                class="btn btn-primary btn-sm mx-1">Back
         </button>
     </a>
 
