--- a/leaderboards/templates/leaderboards/leaderboard_list.html
+++ b/leaderboards/templates/leaderboards/leaderboard_list.html
@@ -4,7 +4,7 @@
     <div class="d-flex justify-content-between align-items-start">
         <a href="{% url 'leaderboard-create' %}">
             <button type="button"
-                    class="btn btn-primary btn-sm mt-3 mx-1">Add
+                    class="btn btn-primary btn-sm mx-1">Add
             </button>
         </a>
     </div>
