--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -26,11 +26,14 @@
     <div class="row">
         <div class="col"></div>
         <div class="col-md-8 border-top">
-            {% block content %}
-            {% endblock %}
+            <div class="mt-3">
+                {% block content %}
+                {% endblock %}
+            </div>
         </div>
         <div class="col"></div>
     </div>
 </div>
+
 </body>
 </html>
