--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -6,18 +6,23 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-    <h4>{% trans "Sign Out" %}</h4>
-
-    <p class="small">{% trans 'Are you sure you want to sign out?' %}</p>
-
-    <form method="post" action="{% url 'account_logout' %}">
-        {% csrf_token %}
-        {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-        {% endif %}
-        <button type="submit" class="btn btn-outline-primary"
-                onclick="this.disabled=true; this.form.submit();">{% trans 'Sign Out' %}</button>
-    </form>
-
+    <div class="d-flex flex-column align-items-center">
+        <div>
+            <h4>{% trans "Sign Out" %}</h4>
+        </div>
+        <div>
+            <p class="small">{% trans 'Are you sure you want to sign out?' %}</p>
+        </div>
+        <div>
+            <form method="post" action="{% url 'account_logout' %}">
+                {% csrf_token %}
+                {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                {% endif %}
+                <button type="submit" class="btn btn-outline-primary"
+                        onclick="this.disabled=true; this.form.submit();">{% trans 'Sign Out' %}</button>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
