--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -6,13 +6,15 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h4>{% trans "Change Password" %}</h4>
+    <div class="d-flex flex-column align-items-center">
+        <h4>{% trans "Change Password" %}</h4>
 
-    <form class="form-text" method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-outline-primary" type="submit" name="action"
-                onclick="this.disabled=true; this.form.submit();">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+        <form class="form-text" method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-outline-primary" type="submit" name="action"
+                    onclick="this.disabled=true; this.form.submit();">{% trans "Change Password" %}</button>
+            <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        </form>
+    </div>
 {% endblock %}
