--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,21 +7,19 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+    <div class="d-flex flex-column align-items-center">
+        <h4>{% trans "Password Reset" %}</h4>
+        {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
 
-    <h4>{% trans "Password Reset" %}</h4>
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+        <p class="small">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <p class="small">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form class="form-text" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-outline-primary" type="submit" value="{% trans 'Reset My Password' %}"
-               onclick="this.disabled=true; this.form.submit();"/>
-    </form>
-
-    <p class="small">{% blocktrans %}Please contact us if you have any trouble resetting your
-        password.{% endblocktrans %}</p>
+        <form class="form-text" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input class="btn btn-outline-primary" type="submit" value="{% trans 'Reset My Password' %}"
+                   onclick="this.disabled=true; this.form.submit();"/>
+        </form>
+    </div>
 {% endblock %}
