--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -5,16 +5,20 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h4>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h4>
+    <div class="d-flex flex-column align-items-center">
+        <h4>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h4>
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p class="small">{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form class="form-text" method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <input class="btn btn-outline-primary" type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
-    {% endif %}
+        {% if token_fail %}
+            {% url 'account_reset_password' as passwd_reset_url %}
+            <p class="small">{% blocktrans %}The password reset link was invalid, possibly because it has already been
+                used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+        {% else %}
+            <form class="form-text" method="POST" action="{{ action_url }}">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input class="btn btn-outline-primary" type="submit" name="action"
+                       value="{% trans 'change password' %}"/>
+            </form>
+        {% endif %}
+    </div>
 {% endblock %}
