--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,20 +6,21 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-    <h4>{% trans "Sign Up" %}</h4>
+    <div class="d-flex flex-column align-items-center">
+        <h4>{% trans "Sign Up" %}</h4>
 
-    <p class="small">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>
-        .{% endblocktrans %}</p>
+        <p class="small">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>
+            .{% endblocktrans %}</p>
 
-    <form class="signup form-text" id="signup_form" method="post" action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form|crispy }}
-        {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-        {% endif %}
-        <button type="submit" class="btn btn-outline-primary"
-                onclick="this.disabled=true; this.form.submit();">{% trans "Sign Up" %} &raquo;
-        </button>
-    </form>
-
+        <form class="signup form-text" id="signup_form" method="post" action="{% url 'account_signup' %}">
+            {% csrf_token %}
+            {{ form|crispy }}
+            {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% endif %}
+            <button type="submit" class="btn btn-outline-primary"
+                    onclick="this.disabled=true; this.form.submit();">{% trans "Sign Up" %} &raquo;
+            </button>
+        </form>
+    </div>
 {% endblock %}
