--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -28,19 +28,11 @@
             FB.AppEvents.logPageView();
 
         };
-
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) {
-                return;
-            }
-            js = d.createElement(s);
-            js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-
     </script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous"
+            src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v15.0&appId=856116908928188&autoLogAppEvents=1"
+            nonce="wQVlwfPo"></script>
 </head>
 <body>
 
