--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -16,23 +16,23 @@
 
     <title>Leaderboards</title>
 
-    <script>
-        window.fbAsyncInit = function () {
-            FB.init({
-                appId: '856116908928188',
-                cookie: true,
-                xfbml: true,
-                version: 'v15.0'
-            });
-
-            FB.AppEvents.logPageView();
-
-        };
-    </script>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous"
-            src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v15.0&appId=856116908928188&autoLogAppEvents=1"
-            nonce="wQVlwfPo"></script>
+{#    <script>#}
+{#        window.fbAsyncInit = function () {#}
+{#            FB.init({#}
+{#                appId: '856116908928188',#}
+{#                cookie: true,#}
+{#                xfbml: true,#}
+{#                version: 'v15.0'#}
+{#            });#}
+{##}
+{#            FB.AppEvents.logPageView();#}
+{##}
+{#        };#}
+{#    </script>#}
+{#    <div id="fb-root"></div>#}
+{#    <script async defer crossorigin="anonymous"#}
+{#            src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v15.0&appId=856116908928188&autoLogAppEvents=1"#}
+{#            nonce="wQVlwfPo"></script>#}
 </head>
 <body>
 
