--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,6 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load crispy_forms_filters %}
+{% load static %}
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -19,11 +20,14 @@
 
             <div class="socialaccount_ballot">
 
-                <a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook OAuth2</a>
-
-                <div class="login-or">{% trans 'or' %}</div>
+                <form action="{% provider_login_url 'facebook' %}" method="post">
+                    {% csrf_token %}
+                    <button class="btn" type="submit"><img src="{% static 'icons/facebook.svg' %}" alt="Facebook Login"/></button>
+                </form>
 
             </div>
+
+            <div class="login-or m-4">{% trans 'or' %}</div>
 
             {% include "socialaccount/snippets/login_extra.html" %}
 
